cmake_minimum_required(VERSION 3.23)
project(Leanne_Annor_Adjaye_ICP_Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leanne_Annor_Adjaye_ICP_Project main.cpp Airport.cpp Airport.h Airline.cpp Airline.h Route.cpp Route.h Node.cpp Node.h data_reader.cpp data_reader.h breadth_first_search.cpp breadth_first_search.h helper.cpp helper.h)
